# waveshare-photopainter

./: Cargo.toml  LICENSE  README.md  build.rs  claude.md  memory.x  rust-analyzer.toml  rustfmt.toml
.cargo/: config.toml
assets/: absurd-quotes.json
async-fw-rs/: Cargo.toml  README.md  memory.x
async-fw-rs/src/: epaper.rs  main.rs
orig_waveshare/: CMakeLists.txt  main.c
orig_waveshare/lib/FatFs_SPI/sd_driver/: sd_spi.c
orig_waveshare/lib/e-Paper/: EPD_7in3f.c
src/: epaper.rs  graphics.rs  main.rs  rtc.rs  usb_console.rs
src/epaper/: buffer.rs  driver.rs
src/graphics/: calendar.rs  ltree.rs  mod.rs  random_walk.rs
tools/: DEBUG.md
