[package]
name = "waveshare-photopainter"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
portable-atomic = { version = "1.0", features = ["critical-section"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8", features = ["defmt", "time-driver", "rp2040"] }
embedded-sdmmc = "0.7.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embassy-embedded-hal = "0.5"
embedded-graphics = "0.8.1"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
embedded-hal-async = "1.0.0"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
